c/experimental/stf/include/cccl/c/experimental/stf/stf.h


typedef enum stf_access_mode
{
  STF_NONE  = 0, 
  STF_READ  = 1 << 0, 
  STF_WRITE = 1 << 1, 
  STF_RW    = STF_READ | STF_WRITE 
} stf_access_mode;
typedef struct stf_exec_place_opaque_t* stf_exec_place_handle;
typedef struct stf_data_place_opaque_t* stf_data_place_handle;
stf_exec_place_handle stf_exec_place_host(void);
stf_exec_place_handle stf_exec_place_device(int dev_id);
stf_exec_place_handle stf_exec_place_current_device(void);
stf_exec_place_handle stf_exec_place_clone(stf_exec_place_handle h);
void stf_exec_place_destroy(stf_exec_place_handle h);
int stf_exec_place_is_host(stf_exec_place_handle h);
int stf_exec_place_is_device(stf_exec_place_handle h);
stf_data_place_handle stf_data_place_host(void);
stf_data_place_handle stf_data_place_device(int dev_id);
stf_data_place_handle stf_data_place_managed(void);
stf_data_place_handle stf_data_place_affine(void);
stf_data_place_handle stf_data_place_current_device(void);
stf_data_place_handle stf_data_place_clone(stf_data_place_handle h);
void stf_data_place_destroy(stf_data_place_handle h);
int stf_data_place_get_device_ordinal(stf_data_place_handle h);
const char* stf_data_place_to_string(stf_data_place_handle h);
typedef struct stf_ctx_handle_t* stf_ctx_handle;
typedef struct stf_logical_data_handle_t* stf_logical_data_handle;
typedef struct stf_task_handle_t* stf_task_handle;
typedef struct stf_host_launch_handle_t* stf_host_launch_handle;
typedef struct stf_host_launch_deps_handle_t* stf_host_launch_deps_handle;
typedef void (*stf_host_callback_fn)(stf_host_launch_deps_handle deps);
stf_ctx_handle stf_ctx_create(void);
stf_ctx_handle stf_ctx_create_graph(void);
void stf_ctx_finalize(stf_ctx_handle ctx);
cudaStream_t stf_fence(stf_ctx_handle ctx);
stf_logical_data_handle stf_logical_data(stf_ctx_handle ctx, void* addr, size_t sz);
stf_logical_data_handle
stf_logical_data_with_place(stf_ctx_handle ctx, void* addr, size_t sz, stf_data_place_handle dplace);
void stf_logical_data_set_symbol(stf_logical_data_handle ld, const char* symbol);
void stf_logical_data_destroy(stf_logical_data_handle ld);
stf_logical_data_handle stf_logical_data_empty(stf_ctx_handle ctx, size_t length);
stf_logical_data_handle stf_token(stf_ctx_handle ctx);
stf_task_handle stf_task_create(stf_ctx_handle ctx);
void stf_task_set_exec_place(stf_task_handle t, stf_exec_place_handle exec_p);
void stf_task_set_symbol(stf_task_handle t, const char* symbol);
void stf_task_add_dep(stf_task_handle t, stf_logical_data_handle ld, stf_access_mode m);
void stf_task_add_dep_with_dplace(
  stf_task_handle t, stf_logical_data_handle ld, stf_access_mode m, stf_data_place_handle data_p);
void stf_task_start(stf_task_handle t);
void stf_task_end(stf_task_handle t);
CUstream stf_task_get_custream(stf_task_handle t);
void* stf_task_get(stf_task_handle t, int submitted_index);
void stf_task_destroy(stf_task_handle t);
void stf_task_enable_capture(stf_task_handle t);
stf_host_launch_handle stf_host_launch_create(stf_ctx_handle ctx);
void stf_host_launch_add_dep(stf_host_launch_handle h, stf_logical_data_handle ld, stf_access_mode m);
void stf_host_launch_set_symbol(stf_host_launch_handle h, const char* symbol);
void stf_host_launch_set_user_data(stf_host_launch_handle h, const void* data, size_t size, void (*dtor)(void*));
void stf_host_launch_submit(stf_host_launch_handle h, stf_host_callback_fn callback);
void stf_host_launch_destroy(stf_host_launch_handle h);
void* stf_host_launch_deps_get(stf_host_launch_deps_handle deps, size_t index);
size_t stf_host_launch_deps_get_size(stf_host_launch_deps_handle deps, size_t index);
size_t stf_host_launch_deps_size(stf_host_launch_deps_handle deps);
void* stf_host_launch_deps_get_user_data(stf_host_launch_deps_handle deps);